# kernel

./: .gitignore  Cargo.toml  build.rs  default.nix  init.sh  link.ld  link.map  link.sh  riscv64.json  run.sh
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: main.rs
kernel/src/alloc/: page_vec.rs
kernel/src/arch/riscv64/: mod.rs  page.rs  reloc.rs
kernel/src/dev/: display.rs  pci.rs  syscon.rs  test_pci.rs  vga.rs
kernel/src/dtb/: dump.rs  stream.rs  strings.rs
kernel/src/dtb/iter/: property.rs  reserved.rs  structure.rs
kernel/src/interrupt/: plic.rs
kernel/src/mem/: mod.rs
kernel/src/panic/: mod.rs
kernel/src/sbi/: mod.rs
kernel/src/sync/: mutex.rs
kernel/src/syscall/: mod.rs
kernel/src/task/: mod.rs
src/: arch.rs  entry.rs  hexdump.rs  main.rs  panic.rs  pci.rs  sout.rs  storage_device.rs  syscon.rs  uart.rs  vga.rs
src/alloc/: buddy.rs  mod.rs  slab.rs
src/arch/: entry.rs  mod.rs  mtrap.rs  page.rs  reloc.rs  strap.rs
src/arch/riscv64/: entry.rs  strap.rs  trace.rs
src/dev/: block.rs  mod.rs  pci.rs  syscon.rs  test_pci.rs  uart.rs  vga.rs
src/dtb/: dump.rs  mod.rs  parser.rs  stream.rs
src/dtb/iter/: mod.rs  node.rs  property.rs
src/interrupt/: mod.rs  plic.rs
src/mem/: mod.rs  pages.rs
src/panic/: mod.rs
src/sbi/: mod.rs
src/std/: stdio.rs
src/sync/: mutex.rs
src/task/: mod.rs
src/timer/: clint.rs
src/util/: hexdump.rs
xbuild/: Cargo.toml
xbuild/src/: main.rs
xrun/: Cargo.toml
xrun/src/: main.rs
