[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[profile.dev]
panic = "abort"

[profile.release]
debug = 1
panic = "abort"
lto = true
codegen-units = 1

[dependencies]
mycelium-bitfield = "*"
ansi = {version = "*", git="https://github.com/ParkerTenBroeck/ansi"}
riscv = "*"

[build-dependencies]
image = "*"
